c/examples/writing-a-c-compiler-tests/tests/chapter_9/valid/libraries/no_function_calls/local_stack_variables_client.c
int f(int reg1, int reg2, int reg3, int reg4, int reg5, int reg6,
    int stack1, int stack2, int stack3);

int main(void) {
    return f(1, 2, 3, 4, 5, 6, -1, -2, -3);
}