c/examples/writing-a-c-compiler-tests/tests/chapter_9/invalid_types/extra_credit/switch_on_function.c
int main(void) {
    int f(void);
    switch (f)
        return 0;
}